# llm-benchmark-sim

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  hack.sh  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
assets/: dashboard.json
charts/: Chart.yaml  values.yaml
charts/templates/: benchmark_deployment.yaml  benchmark_service.yaml  configmap.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  randomiser_deployment.yaml  randomiser_service.yaml  secrets.yaml  service.yaml
src/benchmark_service/: Dockerfile  config.py  main.py
src/benchmark_service/api/routers/: auth.py  base.py  benchmark.py  llm.py  metric.py
src/benchmark_service/handlers/services/: benchmark.py  llm.py  metric.py
src/domain/: __init__.py
src/domain/entities/: benchmark.py  llm.py  metric.py
src/domain/interfaces/: benchmark_interface.py  llm_interface.py  metric_interface.py
src/domain/repositories/: benchmark_repository.py  llm_repository.py  metric_repository.py
src/infrastructure/database/: __init__.py  session.py
src/infrastructure/utils/: config.py
src/randomiser_service/: Dockerfile  config.py  main.py
src/randomiser_service/database/: __init__.py  seed.py  session.py
src/randomiser_service/tests/: test_benchmark_service.py
src/randomiser_service/utils/: randomizer.py  retry.py
src/shared/database/: __init__.py  session.py
src/shared/domain/: __init__.py
src/shared/redis/: redis.py
src/shared/utils/: config.py
(+31 files in other folders)
